gcc/testsuite/gm2/pim/fail/convert5.mod
(* Copyright (C) 2003, 2004, 2005, 2006 Free Software Foundation, Inc. *)
(* This file is part of GNU Modula-2.

GNU Modula-2 is free software; you can redistribute it and/or modify it under
the terms of the GNU General Public License as published by the Free
Software Foundation; either version 2, or (at your option) any later
version.

GNU Modula-2 is distributed in the hope that it will be useful, but WITHOUT ANY
WARRANTY; without even the implied warranty of MERCHANTABILITY or
FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
for more details.

You should have received a copy of the GNU General Public License along
with gm2; see the file COPYING.  If not, write to the Free Software
Foundation, 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. *)

MODULE convert5 ;

PROCEDURE Min (a, b: CARDINAL) : CARDINAL ;
BEGIN
   IF a<b
   THEN
      RETURN( a )
   ELSE
      RETURN( b )
   END
END Min ;

PROCEDURE foo (c: CARDINAL) : INTEGER ;
BEGIN
(*   RETURN( -VAL(INTEGER, VAL(CARDINAL, MAX(INTEGER))+1) ) *)
   RETURN( -VAL(INTEGER, VAL(CARDINAL, 2147483647)+1) )
END foo ;

BEGIN
   IF foo(2)=2
   THEN
   END
END convert5.
